:lipstick: 兼容 octotree

--- a/src/microhub.sass
+++ b/src/microhub.sass
@@ -131,6 +131,11 @@ body
                 height: 18px
 
 
+// 兼容 octotree
+.octotree-show .Header
+    padding-left: 232px
+
+
 .clippy
     position: fixed;
     z-index: 1000;
