--- a/src/microhub.sass
+++ b/src/microhub.sass
@@ -132,8 +132,11 @@ body
 
 
 // 兼容 octotree
-.octotree-show .Header
-    padding-left: 232px
+.octotree
+    .Header
+        padding-left: 24px
+    &.octotree-show .Header
+        padding-left: 232px
 
 
 .clippy
